hphp/test/slow/function/sometimes-defined.php.expectf
bar called....
bar called....
bar called....

Fatal error: Call to undefined function bar() in %s/sometimes-defined.php on line 12